--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-router-typesafe": "^1.5.0",
