--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -35,6 +36,7 @@
     "@storybook/react": "^8.1.4",
     "@storybook/react-vite": "^8.1.4",
     "@storybook/test": "^8.1.4",
+    "@testing-library/react": "^15.0.7",
     "@types/crypto-js": "^4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -45,8 +47,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
+    "jsdom": "^24.1.0",
     "storybook": "^8.1.4",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
